fixes to index & success

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<link href="css/components/landing.css" rel="stylesheet" type="text/css" />
 		<link href="css/components/landing-form.css" rel="stylesheet" type="text/css" />
 		<link href="css/components/landing-logos.css" rel="stylesheet" type="text/css" />
+		<link href="css/components/media-query.css" rel="stylesheet" type="text/css" />
 
 		<!-- scripts -->
 		<script src="js/landing-form.js" type="text/javascript"></script>
@@ -35,6 +36,7 @@
 						<input required="required" type="text" name="passcode" id="passcode"/>
 						<label for="passcode">passcode</label>
 					</div>
+					<input type="submit" hidden="hidden" />
 				</form>
 				
 				<img src="assets/png/org-logos.png" id="org-logos"/>
