--- a/original-statics/admin-candidate.html
+++ b/original-statics/admin-candidate.html
@@ -1,33 +1,65 @@
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="css/components/candidate.css" />
+		<title>Admin Dashboard</title>
+
+		<!-- CSS LINKS -->
+		<link rel="stylesheet" type="text/css" href="css/components/admin.css" />
+		<link rel="stylesheet" type="text/css" href="css/components/admin-candidate.css" />
+
 	</head>
 	<body>
+		<!-- HEADER BAR THING -->
 		<div id="header-container">
 			<img id="header-ballot" src="assets/svg/ballot-white.svg">
-			<a>Voter's List</a>
-			<a>Candidate's List</a>
-			<a>Comelec Offices</a>
-			<a>Unit</a>
+			<a href="admin-voter.html">Voter's List</a>
+			<a href="admin-candidate.html" id="selected">Candidate's List</a>
+			<a href="admin-officer.html">Comelec Offices</a>
+			<a href="admin-unit.html">Unit</a>
 			<div id="user-container">
 				<img id="user-icon" src="assets/svg/user.svg">
 				<div id="user-name"> Troy Bolton</div>
 			</div>
+			<!--
+			<div id="user-container">
+				<button class="dropbtn">
+					
+				</button>
+				<div id="user-container-content">
+					<div> Profile</div>
+					<div> Log out </div>
+
+				</div>
+			</div> -->
 			
 		</div>
 
+		<!-- TABS BUTTONS TO TRAVERSE THE DIFF SECTIONS -->
 		<div id="tab-buttons-container">
 		  	<button class="tab-buttons" onclick="openTab(event, 'All')" id="tab-all">See all candidates</button>
 		 	<button class="tab-buttons" onclick="openTab(event, 'Add')"  id="tab-add">Add a candidate</button>
 			<button class="tab-buttons" onclick="openTab(event, 'Edit')"  id="tab-edit-take">Edit takes</button>
+
+			<!-- SEARCH BAR AND DESELECT-DELETE TAKE UP THE SAME SPOT. THEY ARE ACTIVATED AND DEACTIVATED RESPECTIVELY-->
+
+			<!-- SEARCH BAR
 			<form action="" id="tab-search">
 				<input  id="search" type="text" name="search-cand" placeholder="Search a candidate...">
-			</form>
+			</form> -->
+
+			<!-- DESELECT-DELETE -->
+			<div id="deselect-delete">
+				<button id="deselect">Deselect All</button>
+				<button id="delete">Delete Selected Candidate(s)</button>
+			</div>
 		</div>
 
+		<!-- CONTAINER WHERE TABS WILL OCCUPY -->
 		<div id="tab-container">
+
+			<!-- FIRST TAB -->
 			<div id="All" class="tab-content">
 				<table>
+					<!-- FIRST ROW IS HEADER/TITLE ROW. DO NOT CHANGE!! -->
 					<tr class="row-0">
 						<td class="col-checkbox"><input type="checkbox"></td>
 						<td class="col-name">Full Name</td>
@@ -35,20 +67,8 @@
 						<td class="col-position">Position</td>
 						<td class="col-status">Has Voted</td>
 					</tr>
-					<tr class="row-1">
-						<td class="col-checkbox"><input type="checkbox"></td>
-						<td class="col-name">Logan Paul</td>
-						<td class="col-id">17496849</td>
-						<td class="col-position">Youtuber</td>
-						<td class="col-status">NO</td>
-					</tr>
-					<tr class="row-2">
-						<td class="col-checkbox"><input type="checkbox"></td>
-						<td class="col-name">Jake Paul</td>
-						<td class="col-id">17496849</td>
-						<td class="col-position">Youtuber</td>
-						<td class="col-status">YES</td>
-					</tr>
+
+					<!-- TEMPLATES FOR DATA INSERTION. NOTE THAT THERE IS A "row-1" AND "row-2"  FOR THEIR ALTERNATING COLORS -->
 					<tr class="row-1">
 						<td class="col-checkbox"><input type="checkbox"></td>
 						<td class="col-name">Logan Paul</td>
@@ -80,6 +100,7 @@
 				</table>
 			</div>
 
+			<!-- SECOND TAB (FORM TAB)-->
 			<form action="" id="Add" class="tab-content">
 				<div class="info-fields-container">
 					<div class="info-container">
@@ -126,10 +147,12 @@
 
 				<div class="info-buttons-container">
 					<button class="button cancel">Cancel</button>
+					<!-- SUBMIT BUTTON FOR THE TAB -->
 					<input class="button confirm" type="submit" value="Add new candidate">
 				</div>
 			</form>
 
+			<!-- THIRD TAB (FORM TAB)-->
 			<form action="" id="Edit" class="tab-content">
 				<div class="takes-container">
 					
@@ -160,33 +183,22 @@
 
 				<div class="info-buttons-container">
 					<button class="button cancel">Cancel</button>
+					<!-- SUBMIT BUTTON FOR THE TAB -->
 					<input class="button confirm" type="submit" value="Save Changes">
 				</div>
 			</form>
 		</div>
 
 		<div id="logo">
-			<img width= 500 height=50 src="assets/ipng/org-logos.png">
+			<img width= 500 height=50 src="assets/png/org-logos.png">
 		</div>
 	</body>
 
-	<script>
-		function openTab(evt, tab) {
-		    var i, tabcontent, tabButtons;
-		    tabcontent = document.getElementsByClassName("tab-content");
-		    for (i = 0; i < tabcontent.length; i++) {
-		        tabcontent[i].style.display = "none";
-		    }
-		    tabButtons = document.getElementsByClassName("tab-buttons");
-		    for (i = 0; i < tabButtons.length; i++) {
-		        tabButtons[i].className = tabButtons[i].className.replace(" active", "");
-		    }
-		    document.getElementById(tab).style.display = "block";
-		    evt.currentTarget.className += " active";
-		}
-		//set default tab to All Candidates Tab
+	<!-- JAVASCRIPT LINK-->
+	<script src="js/admin.js">
+		//set default tab to "All" Tab by activating it on page load
 		document.getElementById("tab-all").click();
-	</script>	
+	</script>
 </html>
 
 
