--- a/original-statics/admin-voter.html
+++ b/original-statics/admin-voter.html
@@ -1,14 +1,20 @@
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="css/components/voter.css" />
+		<title>Admin Dashboard</title>
+
+		<!-- CSS LINKS -->
+		<link rel="stylesheet" type="text/css" href="css/components/admin.css" />
+		<link rel="stylesheet" type="text/css" href="css/components/admin-voter.css" />
+
 	</head>
 	<body>
+		<!-- HEADER BAR THING -->
 		<div id="header-container">
 			<img id="header-ballot" src="assets/svg/ballot-white.svg">
-			<a>Voter's List</a>
-			<a>Candidate's List</a>
-			<a>Comelec Offices</a>
-			<a>Unit</a>
+			<a href="admin-voter.html" id="selected">Voter's List</a>
+			<a href="admin-candidate.html">Candidate's List</a>
+			<a href="admin-officer.html">Comelec Offices</a>
+			<a href="admin-unit.html">Unit</a>
 			<div id="user-container">
 				<img id="user-icon" src="assets/svg/user.svg">
 				<div id="user-name"> Troy Bolton</div>
@@ -16,17 +22,33 @@
 			
 		</div>
 
+		<!-- TABS BUTTONS TO TRAVERSE THE DIFF SECTIONS -->
 		<div id="tab-buttons-container">
 		  	<button class="tab-buttons" onclick="openTab(event, 'All')" id="tab-all">See all voters</button>
 		 	<button class="tab-buttons" onclick="openTab(event, 'Add')"  id="tab-add">Add a voter</button>
+
+		 	<!-- SEARCH BAR AND DESELECT-DELETE TAKE UP THE SAME SPOT. THEY ARE ACTIVATED AND DEACTIVATED RESPECTIVELY-->
+		 	
+			<!-- SEARCH BAR
 			<form action="" id="tab-search">
 				<input  id="search" type="text" name="search-voter" placeholder="Search a voter...">
-			</form>
+			</form> -->
+
+			<!-- DESELECT-DELETE -->
+			<div id="deselect-delete">
+				<button id="deselect">Deselect All</button>
+				<button id="delete">Delete Selected Candidate(s)</button>
+			</div>
+
 		</div>
 
+		<!-- CONTAINER WHERE TABS WILL OCCUPY -->
 		<div id="tab-container">
+
+			<!-- FIRST TAB -->
 			<div id="All" class="tab-content">
 				<table>
+					<!-- FIRST ROW IS HEADER/TITLE ROW. DO NOT CHANGE!! -->
 					<tr class="row-0">
 						<td class="col-checkbox"><input type="checkbox"></td>
 						<td class="col-name">Full Name</td>
@@ -34,6 +56,8 @@
 						<td class="col-position">Has Voted</td>
 						<td class="col-status">Eligibility</td>
 					</tr>
+
+					<!-- TEMPLATES FOR DATA INSERTION. NOTE THAT THERE IS A "row-1" AND "row-2"  FOR THEIR ALTERNATING COLORS -->
 					<tr class="row-1">
 						<td class="col-checkbox"><input type="checkbox"></td>
 						<td class="col-name">Logan Paul</td>
@@ -63,26 +87,11 @@
 						<td class="col-position">YES</td>
 						<td class="col-status">YES</td>
 					</tr>
-
-					<tr class="row-1">
-						<td class="col-checkbox"><input type="checkbox"></td>
-						<td class="col-name">Logan Paul</td>
-						<td class="col-id">17496849</td>
-						<td class="col-position">NO</td>
-						<td class="col-status">NO</td>
-					</tr>
-					<tr class="row-2">
-						<td class="col-checkbox"><input type="checkbox"></td>
-						<td class="col-name">Jake Paul</td>
-						<td class="col-id">17496849</td>
-						<td class="col-position">YES</td>
-						<td class="col-status">YES</td>
-					</tr>
-
 
 				</table>
 			</div>
 
+			<!-- SECOND TAB (FORM TAB)-->
 			<form action="" id="Add" class="tab-content">
 				<div class="info-fields-container">
 					<div class="info-container">
@@ -129,6 +138,7 @@
 
 				<div class="info-buttons-container">
 					<button class="button cancel">Cancel</button>
+					<!-- SUBMIT BUTTON FOR THE TAB -->
 					<input class="button confirm" type="submit" value="Add new voter">
 				</div>
 			</form>
@@ -139,24 +149,13 @@
 			<img width= 500 height=50 src="assets/png/org-logos.png">
 		</div>
 	</body>
-
-	<script>
-		function openTab(evt, tab) {
-		    var i, tabcontent, tabButtons;
-		    tabcontent = document.getElementsByClassName("tab-content");
-		    for (i = 0; i < tabcontent.length; i++) {
-		        tabcontent[i].style.display = "none";
-		    }
-		    tabButtons = document.getElementsByClassName("tab-buttons");
-		    for (i = 0; i < tabButtons.length; i++) {
-		        tabButtons[i].className = tabButtons[i].className.replace(" active", "");
-		    }
-		    document.getElementById(tab).style.display = "block";
-		    evt.currentTarget.className += " active";
-		}
-		//set default tab to All Candidates Tab
+	
+	<!-- JAVASCRIPT LINK-->
+	<script src="js/admin.js">
+		//set default tab to "All" Tab by activating it on page load
 		document.getElementById("tab-all").click();
-	</script>	
+	</script>
+
 </html>
 
 
