lscs logo, modal

--- a/original-statics/index.html
+++ b/original-statics/index.html
@@ -22,6 +22,7 @@
 </head>
 <body>
 <img src="assets/png/uxsoc-logo.png" id="uxsoc-logo"/>
+<img src="assets/png/lscs.png" id="lscs-logo"/>
 <div id="landing-container">
     <div id="landing-child">
         <div id="title">Welcome to the Elections</div>
