--- a/email_template.html
+++ b/email_template.html
@@ -229,11 +229,7 @@
 
         <!-- Visually Hidden Preheader Text : BEGIN -->
         <div style="max-height:0; overflow:hidden; mso-hide:all;" aria-hidden="true">
-            (Optional) This text will appear in the inbox preview, but not the email body. It can be used to supplement
-            the email subject line or even summarize the email's contents. Extended text preheaders (~490 characters)
-            seems like a better UX for anyone using a screenreader or voice-command apps like Siri to dictate the
-            contents of an email. If this text is not included, email clients will automatically populate it using the
-            text (including image alt text) at the start of the email's body.
+            DLSU Comelec is inviting to you to vote in the elections.
         </div>
         <!-- Visually Hidden Preheader Text : END -->
 
@@ -265,7 +261,7 @@
                 <!-- Hero Image, Flush : BEGIN -->
                 <tr>
                     <td style="background-color: #ffffff;">
-                        <img src="/ComelecLogo.png" width="380" height="" alt="alt_text" border="0"
+                        <img src="cid:logo" width="380" height="" alt="alt_text" border="0"
                             style="width: 100%; max-width: 380px; height: auto;  font-family: sans-serif; font-size: 15px; line-height: 15px; color: #555555; margin: auto; display: block;"
                             class="g-img">
                     </td>
