Removed the candidate list in email receipt

--- a/email_receipt_template.html
+++ b/email_receipt_template.html
@@ -277,27 +277,11 @@
                                     style="padding: 20px; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
                                     <h1
                                         style="margin: 0 0 10px; font-size: 25px; line-height: 30px; color: #333333; font-weight: normal;">
-                                        Receipt Number: SERIALNUMBER
+                                        Name: VOTERNAME <br> 
+                                        Receipt Number: #SERIALNUMBER <br> <br> 
+                                        Thank you for voting.   
                                     </h1>
-                                    <div style="padding: 0; margin: 0;">
-                                        <table
-                                            style="border-collapse: collapse; border: 1px solid black; width: 350px; text-align:center;">
-                                            <thead
-                                                style="border: 1px solid black; padding: 5px; background-color: #222222;">
-                                                <th style="padding: 10px; color: #ffffff;" colspan=2>Receipt Information</th>
-                                            </thead>
-                                            <tr style="border: 1px solid black;">
-                                                <td style="font-weight: bold; border: 1px solid black;"> 
-                                                    <p>Voter Name:</p>
-                                                </td>
-                                                <td style="border: 1px solid black;">
-                                                    <p>VOTERNAME</p>
-                                                </td>
-                                            </tr>
-                                            CANDIDATESLIST
-                                        </table>
-                                    </div>
-                                    <p style="margin: 10px 0px 0px;">Thank you for voting. This is to confirm that you have successfully voted at TIMESTAMP.</p>
+                                    <p style="margin: 0px 0px 0px;">This is to confirm that you have successfully voted at TIMESTAMP.</p>
                                 </td>
                             </tr>
                         </table>
